Update test.yml to retry failed CI integrations twice (sast, licensing, dependency scanning) [skip deploy]

--- a/gitlab/test.yml
+++ b/gitlab/test.yml
@@ -22,6 +22,7 @@ include:
 
 sast:
   interruptible: true
+  retry: 2
   variables:
     SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
     SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
@@ -30,11 +31,13 @@ license_scanning:
   # Overly slow to run and not very important, so skip normally to get 5 minutes back on
   # each pipeline.
   interruptible: true
+  retry: 2
   only:
     - schedules
 
 dependency_scanning:
   interruptible: true
+  retry: 2
   only:
     - merge_requests
     - schedules
