--- a/gitlab/test.yml
+++ b/gitlab/test.yml
@@ -76,10 +76,10 @@ dependency_scanning:
   image: python:3.8.1
   extends: .venv
 
-.cpython-3.9-rc:
-  interruptible: true
-  image: python:3.9-rc
-  extends: .venv
+#.cpython-3.9-rc:
+#  interruptible: true
+#  image: python:3.9-rc
+#  extends: .venv
   
 .cpython-tool-alpine:
   interruptible: true
@@ -136,10 +136,10 @@ pytest-c3.8.2:
     - .cpython-3.8.2
     - .nox-test
 
-pytest-c3.9-rc:
-  extends:
-    - .cpython-3.9-rc
-    - .nox-test
+#pytest-c3.9-rc:
+#  extends:
+#    - .cpython-3.9-rc
+#    - .nox-test
 
 install-c3.8.0:
   extends:
@@ -156,10 +156,10 @@ install-c3.8.2:
     - .cpython-3.8.2
     - .nox-pip-install
 
-install-c3.9-rc:
-  extends:
-    - .cpython-3.9-rc
-    - .nox-pip-install
+#install-c3.9-rc:
+#  extends:
+#    - .cpython-3.9-rc
+#    - .nox-pip-install
 
 verify-c3.8.0-pypi:
   extends:
@@ -176,10 +176,10 @@ verify-c3.8.2-pypi:
     - .cpython-3.8.2
     - .nox-pip-install-showtime
 
-verify-c3.9-rc-pypi:
-  extends:
-    - .cpython-3.9-rc
-    - .nox-pip-install-showtime
+#verify-c3.9-rc-pypi:
+#  extends:
+#    - .cpython-3.9-rc
+#    - .nox-pip-install-showtime
 
 coverage-coalesce:
   extends:
