--- a/gitlab/test.yml
+++ b/gitlab/test.yml
@@ -17,14 +17,15 @@
 
 include:
   - template: "Dependency-Scanning.gitlab-ci.yml"
+  - template: "SAST.gitlab-ci.yml"
   - template: "License-Scanning.gitlab-ci.yml"
 
-#sast:
-#  interruptible: true
-#  retry: 2
-#  variables:
-#    SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
-#    SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
+sast:
+  interruptible: true
+  retry: 2
+  variables:
+    SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
+    SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
 
 license_scanning:
   # Overly slow to run and not very important, so skip normally to get 5 minutes back on
@@ -76,10 +77,10 @@ dependency_scanning:
   image: python:3.8.1
   extends: .venv
 
-#.cpython-3.9-rc:
-#  interruptible: true
-#  image: python:3.9-rc
-#  extends: .venv
+.cpython-3.9-rc:
+  interruptible: true
+  image: python:3.9-rc
+  extends: .venv
   
 .cpython-tool-alpine:
   interruptible: true
@@ -136,10 +137,10 @@ pytest-c3.8.2:
     - .cpython-3.8.2
     - .nox-test
 
-#pytest-c3.9-rc:
-#  extends:
-#    - .cpython-3.9-rc
-#    - .nox-test
+pytest-c3.9-rc:
+  extends:
+    - .cpython-3.9-rc
+    - .nox-test
 
 install-c3.8.0:
   extends:
@@ -156,10 +157,10 @@ install-c3.8.2:
     - .cpython-3.8.2
     - .nox-pip-install
 
-#install-c3.9-rc:
-#  extends:
-#    - .cpython-3.9-rc
-#    - .nox-pip-install
+install-c3.9-rc:
+  extends:
+    - .cpython-3.9-rc
+    - .nox-pip-install
 
 verify-c3.8.0-pypi:
   extends:
@@ -176,10 +177,10 @@ verify-c3.8.2-pypi:
     - .cpython-3.8.2
     - .nox-pip-install-showtime
 
-#verify-c3.9-rc-pypi:
-#  extends:
-#    - .cpython-3.9-rc
-#    - .nox-pip-install-showtime
+verify-c3.9-rc-pypi:
+  extends:
+    - .cpython-3.9-rc
+    - .nox-pip-install-showtime
 
 coverage-coalesce:
   extends:
