--- a/pylint.ini
+++ b/pylint.ini
@@ -60,356 +60,82 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=blacklisted-name,
-        invalid-name,
-        empty-docstring,
-        unneeded-not,
-        missing-module-docstring,
-        missing-class-docstring,
-        missing-function-docstring,
-        singleton-comparison,
-        misplaced-comparison-constant,
-        unidiomatic-typecheck,
-        consider-using-enumerate,
-        consider-iterating-dictionary,
-        bad-classmethod-argument,
-        bad-mcs-method-argument,
-        bad-mcs-classmethod-argument,
-        single-string-used-for-slots,
-        line-too-long,
-        too-many-lines,
-        trailing-whitespace,
-        multiple-statements,
-        superfluous-parens,
+disable=bad-continuation,
         bad-whitespace,
-        mixed-line-endings,
-        unexpected-line-ending-format,
-        bad-continuation,
-        wrong-import-position,
-        useless-import-alias,
-        import-outside-toplevel,
-        len-as-condition,
-        print-statement,
-        parameter-unpacking,
-        unpacking-in-except,
-        old-raise-syntax,
-        backtick,
-        long-suffix,
-        old-ne-operator,
-        old-octal-literal,
-        import-star-module-level,
-        non-ascii-bytes-literal,
-        raw-checker-failed,
-        bad-inline-option,
-        locally-disabled,
-        file-ignored,
-        suppressed-message,
-        useless-suppression,
-        deprecated-pragma,
-        use-symbolic-message-instead,
-        c-extension-no-member,
-        literal-comparison,
-        comparison-with-itself,
-        no-self-use,
-        no-classmethod-decorator,
-        no-staticmethod-decorator,
-        useless-object-inheritance,
-        property-with-parameters,
-        cyclic-import,
-        duplicate-code,
-        too-many-ancestors,
-        too-many-instance-attributes,
-        too-few-public-methods,
-        too-many-public-methods,
-        too-many-return-statements,
-        too-many-branches,
-        too-many-arguments,
-        too-many-locals,
-        too-many-statements,
-        too-many-boolean-expressions,
-        consider-merging-isinstance,
-        too-many-nested-blocks,
-        simplifiable-if-statement,
-        redefined-argument-from-local,
-        no-else-return,
-        consider-using-ternary,
-        trailing-comma-tuple,
-        stop-iteration-return,
-        simplify-boolean-expression,
-        inconsistent-return-statements,
-        useless-return,
-        consider-swap-variables,
-        consider-using-join,
-        consider-using-in,
-        consider-using-get,
-        chained-comparison,
-        consider-using-dict-comprehension,
-        consider-using-set-comprehension,
-        simplifiable-if-expression,
-        no-else-raise,
-        unnecessary-comprehension,
-        consider-using-sys-exit,
-        no-else-break,
-        no-else-continue,
-        expression-not-assigned,
-        duplicate-key,
-        assign-to-new-keyword,
-        useless-else-on-loop,
-        exec-used,
-        eval-used,
-        confusing-with-statement,
-        using-constant-test,
-        self-assigning-variable,
-        redeclared-assigned-name,
-        comparison-with-callable,
-        assert-on-tuple,
-        attribute-defined-outside-init,
-        bad-staticmethod-argument,
-        protected-access,
-        arguments-differ,
-        signature-differs,
-        super-init-not-called,
-        no-init,
-        non-parent-init-called,
-        useless-super-delegation,
-        invalid-overridden-method,
-        bad-indentation,
-        mixed-indentation,
-        wildcard-import,
-        import-self,
-        preferred-module,
-        misplaced-future,
-        fixme,
-        global-variable-undefined,
-        global-variable-not-assigned,
-        global-statement,
-        global-at-module-level,
-        unused-import,
-        unused-variable,
-        unused-argument,
-        unused-wildcard-import,
-        redefined-outer-name,
-        redefined-builtin,
-        redefine-in-handler,
-        undefined-loop-variable,
-        unbalanced-tuple-unpacking,
-        cell-var-from-loop,
-        possibly-unused-variable,
-        self-cls-assignment,
-        bare-except,
-        broad-except,
-        duplicate-except,
-        try-except-raise,
         binary-op-exception,
-        raising-format-tuple,
-        wrong-exception-operation,
-        keyword-arg-before-vararg,
-        arguments-out-of-order,
-        bad-format-string-key,
-        unused-format-string-key,
-        bad-format-string,
-        missing-format-argument-key,
-        unused-format-string-argument,
-        format-combined-specification,
-        missing-format-attribute,
-        invalid-format-index,
-        duplicate-string-formatting-argument,
-        anomalous-backslash-in-string,
-        anomalous-unicode-escape-in-string,
-        implicit-str-concat-in-sequence,
-        bad-open-mode,
-        boolean-datetime,
-        redundant-unittest-assert,
-        deprecated-method,
-        bad-thread-instantiation,
-        shallow-copy-environ,
-        invalid-envvar-default,
-        subprocess-popen-preexec-fn,
-        subprocess-run-check,
-        apply-builtin,
-        basestring-builtin,
-        buffer-builtin,
-        cmp-builtin,
-        coerce-builtin,
-        execfile-builtin,
-        file-builtin,
-        long-builtin,
-        raw_input-builtin,
-        reduce-builtin,
-        standarderror-builtin,
-        unicode-builtin,
-        xrange-builtin,
-        coerce-method,
-        delslice-method,
-        getslice-method,
-        setslice-method,
-        no-absolute-import,
-        old-division,
+        c-extension-no-member,
+        cell-var-from-loop,
+        cmp-method,
+        consider-using-sys-exit,
+        cyclic-import,
+        deprecated-str-translate-call,
+        deprecated-types-field,
         dict-iter-method,
         dict-view-method,
-        next-method-called,
-        metaclass-assignment,
-        indexing-exception,
-        raising-string,
-        reload-builtin,
-        oct-method,
-        hex-method,
-        nonzero-method,
-        cmp-method,
-        input-builtin,
-        round-builtin,
-        intern-builtin,
-        unichr-builtin,
-        map-builtin-not-iterating,
-        zip-builtin-not-iterating,
-        range-builtin-not-iterating,
-        filter-builtin-not-iterating,
-        using-cmp-argument,
-        eq-without-hash,
         div-method,
-        idiv-method,
-        rdiv-method,
+        eval-used,
         exception-message-attribute,
-        invalid-str-codec,
-        sys-max-int,
-        bad-python3-import,
-        deprecated-string-function,
-        deprecated-str-translate-call,
-        deprecated-itertools-function,
-        deprecated-types-field,
-        next-method-defined,
-        dict-items-not-iterating,
-        dict-keys-not-iterating,
-        dict-values-not-iterating,
-        deprecated-operator-function,
-        deprecated-urllib-function,
+        exec-used,
+        expression-not-assigned,
+        filter-builtin-not-iterating,
+        format-combined-specification,
+        global-at-module-level,
+        global-statement,
+        global-variable-not-assigned,
+        global-variable-undefined,
+        hex-method,
+        idiv-method,
+        import-outside-toplevel,
+        import-star-module-level,
+        input-builtin,
+        invalid-name,
+        keyword-arg-before-vararg,
+        long-suffix,
+        map-builtin-not-iterating,
+        metaclass-assignment,
+        misplaced-future,
+        missing-format-attribute,
+        next-method-called,
+        no-absolute-import,
+        no-else-return,
+        no-member,
+        no-self-use,
+        non-ascii-bytes-literal,
+        nonzero-method,
+        oct-method,
+        old-division,
+        old-octal-literal,
+        parameter-unpacking,
+        possibly-unused-variable,
+        preferred-module,
+        print-statement,
+        range-builtin-not-iterating,
+        rdiv-method,
+        redeclared-assigned-name,
+        redefine-in-handler,
+        reload-builtin,
+        round-builtin,
+        shallow-copy-environ,
+        simplify-boolean-expression,
+        subprocess-popen-preexec-fn,
+        subprocess-run-check,
+        superfluous-parens,
+        super-init-not-called,
+        too-few-public-methods,
+        too-many-ancestors,
+        too-many-arguments,
+        too-many-branches,
+        too-many-function-args,
+        too-many-instance-attributes,
+        too-many-locals,
+        too-many-public-methods,
+        too-many-statements,
+        try-except-raise,
+        unused-import,
+        wildcard-import,
+        wrong-exception-operation,
         xreadlines-attribute,
-        deprecated-sys-function,
-        exception-escape,
-        comprehension-escape,
-        too-many-function-args
-
-# Enable the message, report, category or checker with the given id(s). You can
-# either give multiple identifier separated by comma (,) or put this option
-# multiple time (only on the command line, not in the configuration file where
-# it should appear only once). See also the "--disable" option for examples.
-enable=syntax-error,
-       unrecognized-inline-option,
-       bad-option-value,
-       init-is-generator,
-       return-in-init,
-       function-redefined,
-       not-in-loop,
-       return-outside-function,
-       yield-outside-function,
-       return-arg-in-generator,
-       nonexistent-operator,
-       duplicate-argument-name,
-       abstract-class-instantiated,
-       bad-reversed-sequence,
-       too-many-star-expressions,
-       invalid-star-assignment-target,
-       star-needs-assignment-target,
-       nonlocal-and-global,
-       continue-in-finally,
-       nonlocal-without-binding,
-       used-prior-global-declaration,
-       misplaced-format-function,
-       method-hidden,
-       access-member-before-definition,
-       no-method-argument,
-       no-self-argument,
-       invalid-slots-object,
-       assigning-non-slot,
-       invalid-slots,
-       inherit-non-class,
-       inconsistent-mro,
-       duplicate-bases,
-       class-variable-slots-conflict,
-       non-iterator-returned,
-       unexpected-special-method-signature,
-       invalid-length-returned,
-       import-error,
-       relative-beyond-top-level,
-       used-before-assignment,
-       undefined-variable,
-       undefined-all-variable,
-       invalid-all-object,
-       no-name-in-module,
-       unpacking-non-sequence,
-       bad-except-order,
-       raising-bad-type,
-       bad-exception-context,
-       misplaced-bare-raise,
-       raising-non-exception,
-       notimplemented-raised,
-       catching-non-exception,
-       bad-super-call,
-       no-member,
-       not-callable,
-       assignment-from-no-return,
-       no-value-for-parameter,
-       unexpected-keyword-arg,
-       redundant-keyword-arg,
-       missing-kwoa,
-       invalid-sequence-index,
-       invalid-slice-index,
-       assignment-from-none,
-       not-context-manager,
-       invalid-unary-operand-type,
-       unsupported-binary-operation,
-       repeated-keyword,
-       not-an-iterable,
-       not-a-mapping,
-       unsupported-membership-test,
-       unsubscriptable-object,
-       unsupported-assignment-operation,
-       unsupported-delete-operation,
-       invalid-metaclass,
-       unhashable-dict-key,
-       dict-iter-missing-items,
-       logging-unsupported-format,
-       logging-format-truncated,
-       logging-too-many-args,
-       logging-too-few-args,
-       logging-not-lazy,
-       logging-format-interpolation,
-       bad-format-character,
-       truncated-format-string,
-       mixed-format-string,
-       format-needs-mapping,
-       missing-format-string-key,
-       too-many-format-args,
-       too-few-format-args,
-       bad-string-format-type,
-       bad-str-strip-call,
-       invalid-envvar-value,
-       yield-inside-async-function,
-       not-async-context-manager,
-       fatal,
-       astroid-error,
-       parse-error,
-       method-check-failed,
-       deprecated-module,
-       reimported,
-       unnecessary-semicolon,
-       abstract-method,
-       lost-exception,
-       missing-parentheses-for-call-in-test,
-       unnecessary-lambda,
-       unnecessary-pass,
-       dangerous-default-value,
-       pointless-statement,
-       pointless-string-statement,
-       unreachable,
-       wrong-spelling-in-comment,
-       wrong-spelling-in-docstring,
-       invalid-characters-in-docstring,
-       multiple-imports,
-       wrong-import-order,
-       ungrouped-imports,
-       trailing-newlines,
-       missing-final-newline,
+        zip-builtin-not-iterating,
 
 
 [REPORTS]
@@ -428,7 +154,7 @@ evaluation=10.0 - ((float(5 * error + warning + refactor + convention) / stateme
 # Set the output format. Available formats are text, parseable, colorized, json
 # and msvs (visual studio). You can also give a reporter class, e.g.
 # mypackage.mymodule.MyReporterClass.
-output-format=text
+output-format=colorized
 
 # Tells whether to display a full report or only the messages.
 reports=yes
@@ -446,7 +172,9 @@ max-nested-blocks=6
 # inconsistent-return-statements if a never returning function is called then
 # it will be considered as an explicit return statement and no message will be
 # printed.
-never-returning-functions=sys.exit
+never-returning-functions=sys.exit,
+                          exit,
+                          quit
 
 
 [SPELLING]
@@ -478,10 +206,10 @@ ignore-comments=yes
 ignore-docstrings=yes
 
 # Ignore imports when computing similarities.
-ignore-imports=no
+ignore-imports=yes
 
 # Minimum lines number of a similarity.
-min-similarity-lines=4
+min-similarity-lines=5
 
 
 [TYPECHECK]
@@ -489,7 +217,8 @@ min-similarity-lines=4
 # List of decorators that produce context managers, such as
 # contextlib.contextmanager. Add to this list to register other decorators that
 # produce valid context managers.
-contextmanager-decorators=contextlib.contextmanager
+contextmanager-decorators=contextlib.contextmanager,
+                          contextlib.asynccontextmanager
 
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
@@ -536,7 +265,9 @@ missing-member-hint-distance=1
 missing-member-max-choices=1
 
 # List of decorators that change the signature of a decorated function.
-signature-mutators=
+signature-mutators=attr.s,
+                   marshaller.attrs,
+                   functools.wraps
 
 
 [BASIC]
@@ -600,8 +331,11 @@ good-names=i,
            j,
            k,
            ex,
-           Run,
-           _
+           T,
+           U,
+           V,
+           _,
+           __
 
 # Include a hint for the correct naming format with invalid-name.
 include-naming-hint=no
@@ -638,7 +372,7 @@ no-docstring-rgx=^_
 # List of decorators that produce properties, such as abc.abstractproperty. Add
 # to this list to register other decorators that produce valid properties.
 # These decorators are taken in consideration only for invalid-name.
-property-classes=abc.abstractproperty
+property-classes=
 
 # Naming style matching correct variable names.
 variable-naming-style=snake_case
@@ -661,7 +395,11 @@ check-str-concat-over-line-jumps=no
 # List of note tags to take in consideration, separated by a comma.
 notes=FIXME,
       XXX,
-      TODO
+      TODO,
+      TO-DO,
+      FIX-ME,
+      BUG,
+      ???,
 
 
 [VARIABLES]
@@ -697,23 +435,23 @@ redefining-builtins-modules=six.moves,past.builtins,future.builtins,builtins,io
 [FORMAT]
 
 # Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
-expected-line-ending-format=
+expected-line-ending-format=LF
 
 # Regexp for a line that is allowed to be longer than the limit.
 ignore-long-lines=^\s*(# )?<?https?://\S+>?$
 
 # Number of spaces of indent required inside a hanging or continued line.
-indent-after-paren=4
+indent-after-paren=0
 
 # String used as indentation unit. This is usually "    " (4 spaces) or "\t" (1
 # tab).
 indent-string='    '
 
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=120
 
 # Maximum number of lines in a module.
-max-module-lines=1000
+max-module-lines=4000
 
 # List of optional constructs for which whitespace checking is disabled. `dict-
 # separator` is used to allow tabulation in dicts, etc.: {1  : 1,\n222: 2}.
@@ -756,7 +494,8 @@ exclude-protected=_asdict,
                   _fields,
                   _replace,
                   _source,
-                  _make
+                  _make,
+                  _internal,
 
 # List of valid names for the first argument in a class method.
 valid-classmethod-first-arg=cls
@@ -772,7 +511,7 @@ valid-metaclass-classmethod-first-arg=cls
 allow-any-import-level=
 
 # Allow wildcard imports from modules that define __all__.
-allow-wildcard-with-all=no
+allow-wildcard-with-all=yes
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
@@ -808,34 +547,34 @@ preferred-modules=
 [DESIGN]
 
 # Maximum number of arguments for function / method.
-max-args=5
+max-args=999999999999
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=7
+max-attributes=999999999999
 
 # Maximum number of boolean expressions in an if statement (see R0916).
-max-bool-expr=5
+max-bool-expr=3
 
 # Maximum number of branch for function / method body.
-max-branches=12
+max-branches=999999999999
 
 # Maximum number of locals for function / method body.
-max-locals=15
+max-locals=999999999999
 
 # Maximum number of parents for a class (see R0901).
 max-parents=7
 
 # Maximum number of public methods for a class (see R0904).
-max-public-methods=20
+max-public-methods=999999999999
 
 # Maximum number of return / yield for function / method body.
-max-returns=6
+max-returns=999999999999
 
 # Maximum number of statements in function / method body.
-max-statements=50
+max-statements=999999999999
 
 # Minimum number of public methods for a class (see R0903).
-min-public-methods=2
+min-public-methods=999999999999
 
 
 [EXCEPTIONS]
