--- a/gitlab/pages.yml
+++ b/gitlab/pages.yml
@@ -33,6 +33,8 @@
   image: python:3.8.2
   stage: test
   script:
+    - apt-get update
+    - apt-get install -qy graphviz
     - pip install requests
     - source tasks/deploy.sh
     - bash tasks/retry_aborts.sh pip install nox
@@ -44,7 +46,6 @@
   only:
     - master
     - staging
-
 
 master-pages:
   extends: .generate-pages-from-specific-branch
@@ -60,6 +61,8 @@ test-pages:
   extends: .deploy-pages-activation
   image: python:3.8.2
   script:
+    - apt-get update
+    - apt-get install -qy graphviz
     - pip install requests nox
     - bash tasks/retry_aborts.sh nox -s documentation
   only:
