Fix docstrings and enable docstyle in CI

--- a/pydocstyle.ini
+++ b/pydocstyle.ini
@@ -1,3 +1,4 @@
 [pydocstyle]
 convention=numpy
-ignore=
+add-ignore=D105, # Magic methods not having a docstring
+           D102, # Missing docstring in public method
