--- a/pylint.ini
+++ b/pylint.ini
@@ -438,7 +438,7 @@ redefining-builtins-modules=six.moves,past.builtins,future.builtins,builtins,io
 expected-line-ending-format=LF
 
 # Regexp for a line that is allowed to be longer than the limit.
-ignore-long-lines=^\s*(# )?<?https?://\S+>?$
+ignore-long-lines=^\s*?(#(:\s+:type:|:?\s+https?://).*?)
 
 # Number of spaces of indent required inside a hanging or continued line.
 indent-after-paren=0
