Fixed docker env_file schenanigans [skip ci]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,6 @@ services:
   gateway-test:
     build: .
     restart: always
+    entrypoint: python -m hikari
+    env_file:
+      - credentials.env
