Maybe it is time to go to bed [skip ci]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   gateway-test:
     build: .
     restart: always
-    entrypoint: python -m hikari.client.gateway_runner
+    entrypoint: python -m hikari.clients.gateway_runner
     env_file:
       - credentials.env
