Implement rest_client.RESTClient + related changes.

--- a/pylint.ini
+++ b/pylint.ini
@@ -90,6 +90,7 @@ disable=bad-continuation,
         input-builtin,
         invalid-name,
         keyword-arg-before-vararg,
+        line-too-long,
         long-suffix,
         map-builtin-not-iterating,
         metaclass-assignment,
