Added typing.Final typehints and fixed some lint/docstyle issues.
Added '/' operators to conversions module.

--- a/pylint.ini
+++ b/pylint.ini
@@ -31,7 +31,7 @@ limit-inference-results=100
 load-plugins=pylint_junit
 
 # Pickle collected data for later comparisons.
-persistent=no
+persistent=yes
 
 # Specify a configuration file.
 #rcfile=
@@ -521,7 +521,9 @@ allow-wildcard-with-all=yes
 analyse-fallback-blocks=no
 
 # Deprecated modules which should not be used, separated by a comma.
-deprecated-modules=optparse,tkinter.tix
+deprecated-modules=optparse,
+                   tkinter.tix,
+                   collections.abc
 
 # Create a graph of external dependencies in the given file (report RP0402 must
 # not be disabled).
@@ -540,7 +542,7 @@ int-import-graph=
 known-standard-library=
 
 # Force import order to recognize a module as part of a third party library.
-known-third-party=enchant
+known-third-party=
 
 # Couples of modules and preferred modules, separated by a comma.
 preferred-modules=
