--- a/ci/pages.gitlab-ci.yml
+++ b/ci/pages.gitlab-ci.yml
@@ -33,12 +33,10 @@
     set -x
     apt-get update
     apt-get install -qy graphviz
-    pip install requests
-    source tasks/deploy.sh
-    bash tasks/retry_aborts.sh pip install nox
+    pip install nox
     git clone ${CI_REPOSITORY_URL} -b ${TARGET_BRANCH} hikari_docs_${TARGET_BRANCH} --depth=1
     cd "hikari_docs_${TARGET_BRANCH}"
-    bash tasks/retry_aborts.sh nox -s documentation
+    nox -s sphinx
     rm ../public -rf && mkdir ../public
     mv public "../public/${TARGET_BRANCH}"
 
@@ -90,8 +88,8 @@
       set -x
       apt-get update
       apt-get install -qy graphviz
-      pip install requests nox
-      bash tasks/retry_aborts.sh nox -s documentation
+      pip install nox
+      nox -s sphinx
   except:
     - master
     - staging
