--- a/pytest.ini
+++ b/pytest.ini
@@ -16,7 +16,7 @@ markers =
     integration: Mark this test as an integration test.
 
 xfail_strict = true
-norecursedirs = docs *.egg-info .git tasks .nox .pytest_cache .venv venv public
+norecursedirs = docs *.egg-info .git tasks .nox .pytest_cache .venv venv public ci
 
 filterwarnings =
     ignore:.*"@coroutine" decorator is deprecated.*:DeprecationWarning
